# ip_network

./: README.md  docker-compose.yml
api/: .env  main.py  pyproject.toml  serverless.yml
api/models/: __init__.py  base.py  carts.py  orders.py  payments.py  products.py  users.py
api/routers/: carts.py  orders.py  payments.py  products.py  users.py
api/schemas/: carts.py  orders.py  payments.py  products.py  users.py
api/sub_system/: settings.py  vnPayLib.py  vn_pay.py
api/utils/: product_util.py  user_utils.py
docker/api/: Dockerfile
docker/web/: Dockerfile
k8s/manifests/: api-deployment.yaml  api-service.yaml  db-deployment.yaml  pgadmin-deployment.yaml  pgadmin-service.yaml  web-deployment.yaml  web-service.yaml
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
web/src/components/admin/: AdminBar.vue  AdminBody.vue
web/src/components/cart/: Cart.vue
web/src/components/footer/: Footer.vue
web/src/components/header/: FixHeader.vue  Header.vue
web/src/components/invoice/: InvoiceInfor.vue
web/src/components/product/: Banner.vue  ProductAdd.vue  ProductCard.vue  ProductDetail.vue  ProductList.vue
web/src/plugins/: vuetify.ts
web/src/routes/: index.ts
web/src/utils/: api.ts  authStore.ts  enum.ts  types.ts
web/src/views/DashBoard/: DashBoard.vue
web/src/views/admin/: DashBoardAdmin.vue  DashBoardOrder.vue
web/src/views/auth/: Login.vue  Register.vue
web/src/views/cart/: CartOr.vue  Result.vue
web/src/views/product/: ProductDetail.vue
